changed title name. fixed overflow bugs and made more mobile first responsive design

--- a/client-v2/src/styles/base.css
+++ b/client-v2/src/styles/base.css
@@ -1,9 +1,14 @@
-body {
-    width: 100vw;
-    height: 100vh;
-    position: relative;
-    margin: 0px;
+* {
+    margin: 0;
     padding: 0px;
+    box-sizing: border-box; /*  makes sure that padding and borders are included in the element's total width and height */
+}
+body, html {
+    width: 100%;
+    height: 100%;
+    margin: 0 auto;
+    position: relative;
+    overflow-x: hidden;
 }
 
 button {
