--- a/client-v2/src/styles/layout/Home/home.css
+++ b/client-v2/src/styles/layout/Home/home.css
@@ -1,14 +1,21 @@
 #l-view-container-home {
-    height: 120vh;
-    overflow: auto;
+    height: 120%;
+    width: 100%;
+    margin: 0 auto;
+    overflow-y: auto;
+    overflow-x: hidden;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 #l-home-header {
     /* border: solid red; */
 }
 #l-home-body {
-    height: 100vh;
+    /* border: solid red; */
+    height: 100%;
+    width: 100%;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -21,9 +28,12 @@
     flex-direction: column;
     align-items: center;
 }
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 750px) {
     #l-home-body-grabber {
         flex-direction: row-reverse;
+        justify-content: space-between;
+        /* border: solid red; */
+        width: 100%;
     }
     #l-home-call-to-action {
         width: 40%;
@@ -33,9 +43,18 @@
 #l-home-call-to-action {
     display: flex;
     flex-direction: column;
+    justify-content: center;
     align-items: center;
+}
+#l-home-call-to-action h1 {
+    /* text-align: center; */
+}
+#l-home-call-to-action * {
+    /* border: solid red; */
+    /* width: 80%; */
 }
 #l-home-footer {
     /* border: solid blue; */
-    height: 20vh;
+    height: 20%;
+    width: 100%;
 }
