--- a/client-v2/src/styles/module/Home/betaAccess.css
+++ b/client-v2/src/styles/module/Home/betaAccess.css
@@ -1,9 +1,10 @@
 .beta-access-container {
     border: solid 1px;
-    width: 100vw;
+    width: 100%;
     background-color: antiquewhite;
     color: black;
     text-decoration: none;
+    text-align: center;
     font-size: 14px;
     cursor: pointer;
 }
@@ -16,7 +17,7 @@
     border-radius: 7px;
     background-color: white;
     color: black;
-    height: 80vh;
+    height: 80%;
     width: 90%;
     display: flex;
     flex-direction: column;
