--- a/client-v2/src/styles/module/Home/fmradio.css
+++ b/client-v2/src/styles/module/Home/fmradio.css
@@ -13,7 +13,7 @@
     display: flex;
     flex-direction: column;
 }
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 750px) {
     .radio-container {
         width: 50%;
     }
