--- a/client-v2/src/styles/theme.css
+++ b/client-v2/src/styles/theme.css
@@ -40,7 +40,7 @@ h3 {
     font-size: 1rem;
 }
 
-@media screen and (min-width: 600px) {
+@media screen and (min-width: 750px) {
     h1 {
         font-size: 4rem;
     }
