--- a/client-v2/src/views/Map/PlaylistGen/PlaylistGen.css
+++ b/client-v2/src/views/Map/PlaylistGen/PlaylistGen.css
@@ -3,7 +3,7 @@
         display: flex;
         flex-direction: row;
         min-height: fit-content;
-        height: 93vh;
+        height: 93%;
         margin-top: 35px;
         align-items: center; 
     }
@@ -41,7 +41,7 @@
 .playlist-gen-view-container {
     display: grid;
     min-height: fit-content;
-    height: 100vh;
+    height: 100%;
 }
 .all-bg-color { background-color: #abd3df; }
 .spotify-bg-color { background-color: #00dc52; }
